Made serial parameters configurable

--- a/config/acao_billboard.conf
+++ b/config/acao_billboard.conf
@@ -5,3 +5,6 @@ _common:
     component: 'billboard'
   acao_billboard:
     debug_out: false
+    serial:
+      device: '/dev/ttyUSB0'
+      speed: 9600
