--- a/samples/acao_billboard.service
+++ b/samples/acao_billboard.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=ACAO Meteo
-Wants=
 After=network.target
+Wants=
 
 [Service]
 Type=notify
@@ -11,10 +11,10 @@ Group=yggdra
 
 ExecStart=/usr/local/bin/acao_billboard
 
-Restart=always
-
 TimeoutStartSec=15
-WatchdogSec=10
+WatchdogSec=30
+Restart=on-failure
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
